refactor(config): 统一全局 AI 配置体系，支持 reasoning effort 与 provider 自动发现